deploy/redis-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: redis
spec:
  clusterIP: None   # Headless service para StatefulSet
  selector:
    app: redis
  ports:
    - port: 6379
      targetPort: 6379
      name: redis
