deploy/web-statefulset.yaml
apiVersion: v1
kind: Service
metadata:
  name: web-headless
spec:
  clusterIP: None
  selector:
    app: web
  ports:
    - port: 80
      targetPort: 80
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: web
spec:
  serviceName: "web-headless"
  replicas: 3   # 3 replicas distribuidas en 3 nodos worker
  podManagementPolicy: Parallel
  updateStrategy:
    type: RollingUpdate
  selector:
    matchLabels:
      app: web
  template:
    metadata:
      labels:
        app: web
        tier: application
    spec:
      # Asegurar que corre en nodo de aplicacion
      nodeSelector:
        node-type: application
      # Forzar que cada replica este en un nodo diferente
      affinity:
        podAntiAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            - labelSelector:
                matchExpressions:
                  - key: app
                    operator: In
                    values:
                      - web
              topologyKey: kubernetes.io/hostname
      containers:
        - name: web
          image: web:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 80
          resources:
            requests:
              cpu: "25m"
              memory: "32Mi"
            limits:
              cpu: "50m"
              memory: "64Mi"
        - name: nginx-exporter
          image: nginx/nginx-prometheus-exporter:1.0.0
          args:
            - '-nginx.scrape-uri=http://localhost/nginx_status'
          ports:
            - containerPort: 9113
              name: metrics
              protocol: TCP
          resources:
            requests:
              cpu: "10m"
              memory: "16Mi"
            limits:
              cpu: "25m"
              memory: "32Mi"
